web/index.css
.pf-x-c-brand--main {
  max-width: 12.5rem;
}

.pf-x-c-brand--nav {
  height: 50px;
}

.pf-x-ws-router {
  height: 100vh;
}

.pf-x-c-tooltip {
  opacity: 0;
  width: 10rem;
  bottom: 50%;
  transform: translateY(50%);
  left: calc(100% + 2rem);
  position: absolute;
  z-index: 1;
  pointer-events: none;
}

.pf-x-c-tooltip-wrapper:hover > .pf-x-c-tooltip {
  opacity: 1;
}

/* Set parent height in nested drawers */
.pf-x-u-h-0px {
  height: 0px;
}

